# cdet-complete

./: .dockerignore  .gitignore  COMMERCIAL-LICENSE.md  CONSOLIDATION_v178_RESULT.md  Dockerfile  INDEX.md  LICENSE  QUICKSTART.md  README.md  bethe_cft_benchmark_note.md  build_oracles.sh  cdet  cdet.py  docker_check.py  packaging_check.py  pyproject.toml  real_patterns_v192.md  real_patterns_v194.md  run_pattern.sh
01_tci_integrator/: HEXRING_RESULT.md  Makefile  README.md  cdet_tci.py  oracle.c
02_control_variate/: CONTROL_VARIATE_RESULT.md  Makefile  README.md  cdet_engine.c  cv.py  cv6.py  lattices.c  lattices.h  oracle_hex.c
03_streaming/: README.md  cdet_stream.c
04_locality/: LOCALITY_RESULT.md  Makefile  decomp_largeL.py  gdump_ring.c  lattices.c  lattices.h  locality.py  locality_prune_test.py  oracle_ring.c  order_axis.py
05_2d_lattice/: Makefile  SQUARE2D_PW_v162_RESULT.md  SQUARE2D_RESULT.md  evdump2d.c  gdump_2d.c  lattices.c  lattices.h  oracle_2d.c  square2d_pw_demo.c  val2d.py
06_hubbard_pattern/: README.md  hubbard_pattern.py
07_predict_vs_compute/: CROSSCHECK_v10.md  CROSSCHECK_v100.md  CROSSCHECK_v101.md  CROSSCHECK_v102.md  CROSSCHECK_v103.md  CROSSCHECK_v104.md  CROSSCHECK_v105.md  CROSSCHECK_v106.md  CROSSCHECK_v107.md  CROSSCHECK_v108.md  CROSSCHECK_v109.md  CROSSCHECK_v11.md  CROSSCHECK_v110.md  CROSSCHECK_v111.md  CROSSCHECK_v112.md  CROSSCHECK_v113.md  CROSSCHECK_v114.md  CROSSCHECK_v115.md  CROSSCHECK_v116.md  CROSSCHECK_v117.md  CROSSCHECK_v118.md  CROSSCHECK_v119.md  CROSSCHECK_v12.md  CROSSCHECK_v120.md  CROSSCHECK_v121.md  (+190 more)
(+356 files in other folders)
